[package]
name = "s_counter_rp2040"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# TODO: 必要ないdependenciesがあるので、後で消す

[dependencies]
cortex-m = "0.7.3"
cortex-m-rt = "0.7.3"
critical-section = "1.1.2"
embedded-graphics = "0.7.1"
embedded-hal = { version = "0.2.7", features = ["unproven"] }
embedded-sdmmc = "0.5.0"
fugit = "0.3.7"
hd44780-driver = "0.4.0"
heapless = "0.7.16"
i2c-pio = "0.7.0"
nb = "1.1"
panic-halt = "0.2.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
pio = "0.2.1"
pio-proc = "0.2.2"
rp-pico = "0.8.0"
rp2040-hal = { version = "0.9.0", features = [ "defmt" ] }
rp2040-boot2 = { version = "0.3.0" }
smart-leds = "0.3.0"
ssd1306 = "0.7.1"
usb-device = "0.2.9"
usbd-hid = "0.5.2"
usbd-serial = "0.1.1"
ws2812-pio = "0.7.0"

defmt = "0.3.5"
defmt-rtt = "0.4.0"

[dev-dependencies]
cortex-m = "0.7.3"
cortex-m-rt = "0.7.3"
critical-section = "1.1.2"
embedded-graphics = "0.7.1"
embedded-hal = { version = "0.2.7", features = ["unproven"] }
embedded-sdmmc = "0.5.0"
fugit = "0.3.7"
hd44780-driver = "0.4.0"
heapless = "0.7.16"
i2c-pio = "0.7.0"
nb = "1.1"
panic-halt = "0.2.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
pio = "0.2.1"
pio-proc = "0.2.2"
rp-pico = "0.8.0"
rp2040-hal = { version = "0.9.0", features = [ "defmt" ] }
rp2040-boot2 = { version = "0.3.0" }
smart-leds = "0.3.0"
ssd1306 = "0.7.1"
usb-device = "0.2.9"
usbd-hid = "0.5.2"
usbd-serial = "0.1.1"
ws2812-pio = "0.7.0"

defmt = "0.3.5"
defmt-rtt = "0.4.0"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
