[package]
name = "s_counter_rp2040"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# TODO: 必要ないdependenciesがあるので、後で消す

[dependencies]
cortex-m-rt = "0.7.3"
embedded-hal = { version = "0.2.7", features = ["unproven"] }
heapless = "0.7.16"
panic-halt = "0.2.0"
rp-pico = "0.8.0"
rp2040-hal = { version = "0.9.0", features = [ "defmt" ] }
usb-device = "0.2.9"
usbd-hid = "0.5.2"
usbd-serial = "0.1.1"

[dev-dependencies]
cortex-m-rt = "0.7.3"
embedded-hal = { version = "0.2.7", features = ["unproven"] }
heapless = "0.7.16"
panic-halt = "0.2.0"
rp-pico = "0.8.0"
rp2040-hal = { version = "0.9.0", features = [ "defmt" ] }
usb-device = "0.2.9"
usbd-hid = "0.5.2"
usbd-serial = "0.1.1"


# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
